<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:icon="@drawable/ic_vert"
        android:title="@string/more_options"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/action_leaderboard"
                android:icon="@drawable/leaderboard"
                android:title="@string/leaderboard"
                app:showAsAction="never" />

            <item
                android:id="@+id/action_docs"
                android:icon="@drawable/ic_article"
                android:title="@string/document"
                app:showAsAction="never" />

            <item
                android:id="@+id/action_info"
                android:icon="@drawable/ic_info"
                android:title="@string/about"
                app:showAsAction="never" />
        </menu>
    </item>
</menu>
