<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:fillViewport="true"
    tools:context=".activities.user.access.RegisterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="24dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:background="@color/black"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="64dp"
            android:background="?selectableItemBackgroundBorderless"
            android:contentDescription="@string/todo_qo"
            android:hapticFeedbackEnabled="true"
            android:padding="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/arrow"
            app:tint="#cecece" />

        <TextView
            android:id="@+id/textView"
            style="@style/titleTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/create_account"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@+id/imageView" />

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:contentDescription="@string/todo_vds"
            app:layout_constraintBottom_toTopOf="@+id/tietUsername"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:srcCompat="@drawable/user" />

        <EditText
            android:id="@+id/tietUsername"
            style="@style/editTextLayoutStyle"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="200dp"
            android:layout_marginEnd="24dp"
            android:autofillHints="true"
            android:hint="@string/username"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLength="20"
            android:singleLine="true"
            android:textColor="#cecece"
            android:textColorHint="#cecece"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:ignore="VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/tieEmail"
            style="@style/editTextLayoutStyle"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:autofillHints="true"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:maxLength="50"
            android:singleLine="true"
            android:textColor="#cecece"
            android:textColorHint="#cecece"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tietUsername"
            tools:ignore="VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/tiePassword"
            style="@style/editTextLayoutStyle"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:autofillHints="false"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLength="16"
            android:textColor="#cecece"
            android:textColorHint="#cecece"
            app:layout_constraintEnd_toEndOf="@+id/tieEmail"
            app:layout_constraintStart_toStartOf="@+id/tieEmail"
            app:layout_constraintTop_toBottomOf="@+id/tieEmail"
            tools:ignore="VisualLintTextFieldSize" />

        <Button
            android:id="@+id/btnRegister"
            style="@style/btnStyle"
            android:layout_width="0dp"
            android:layout_height="@dimen/btn_height"
            android:layout_marginTop="24dp"
            android:hapticFeedbackEnabled="true"
            android:text="@string/create"
            app:layout_constraintEnd_toEndOf="@+id/tiePassword"
            app:layout_constraintStart_toStartOf="@+id/tiePassword"
            app:layout_constraintTop_toBottomOf="@+id/tiePassword"
            tools:ignore="VisualLintButtonSize" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>